--- a/style.css
+++ b/style.css
@@ -597,3 +597,65 @@ footer {
     height: 100px;
 }
 
+
+
+
+
+
+
+
+.modal {
+    position: fixed;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+  }
+  .modal-block {
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    margin: 100px auto;
+    padding: 15px;
+  }
+  .btn-wrap {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .btn-close {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 20px;
+  }
+  
+  .modal-block h3 {
+    margin-bottom: 20px;
+  }
+  .form-field {
+    margin-bottom: 15px;
+  }
+  .form-field  input {
+    height: 30px;
+    width: 100%;
+  }
+  
+  .show {
+    display: block;
+  }
+  .hide {
+    display: none;
+  }
+
+  
+  .slider-block > div {
+    font-size: 50px;
+    text-align: center;
+    color:white;
+    padding: 150px 0;
+  }
+  
