--- a/style.css
+++ b/style.css
@@ -193,14 +193,15 @@ input::placeholder {
     border: 1px solid white;
     border-radius: 50%;
     text-align: center;
-    line-height: 22px;
+    line-height: 20px;
+    font-size: 12px;
 }
 
 .main {
     padding-top: 100px;
 }
 
-.slider {
+/* .slider {
     background-color: rgba(35, 90, 147, 0.8);
     display: flex;
     justify-content: center;
@@ -212,9 +213,9 @@ input::placeholder {
     font-weight: 100;
     text-align: center;
     line-height: 400px;
-}
+} */
 
-.slider_container {
+/* .slider_container {
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
@@ -224,15 +225,15 @@ input::placeholder {
     font-family: 'Roboto', sans-serif;
     font-size: 100px;
     font-weight: 100;
-}
+} */
 
-.main_menu {
+/* .main_menu {
     display: flex;
     justify-content: center;
     width: 100%;
     border-left: 1px solid;
     border-right: 1px solid;
-}
+} */
 
 .main_menu_container {
     display: flex;
@@ -430,17 +431,17 @@ label::before {
 }
 
 .wide:hover,
-.like:hover {
+.like:hover,
+.liked {
     box-shadow: 0px 0px 1px 1px #80aad4;
 }
 
-.wide:focus {
+/* .wide:focus {
     background: url('img/White-Wide.png') center no-repeat #2c71b8;
-}
+} */
 
-.like:focus {
-    background: url('img/White-Heart.png') center no-repeat #2c71b8;
-}
+
+
 
 .wide {
     top: 10px;
@@ -450,6 +451,10 @@ label::before {
 .like {
     top: 50px;
     background: url('img/Heart.png') center no-repeat;
+}
+
+.liked {
+    background: url('img/White-Heart.png') center no-repeat #2c71b8;
 }
 
 .offer {
@@ -586,6 +591,7 @@ h2 {
     margin-bottom: 90px;
     cursor: pointer;
 }
+
 footer {
     display: flex;
     justify-content: center;
@@ -597,13 +603,6 @@ footer {
     height: 100px;
 }
 
-
-
-
-
-
-
-
 .modal {
     position: fixed;
     top:0;
@@ -614,17 +613,21 @@ footer {
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
   }
-  .modal-block {
+
+.modal-block {
     width: 300px;
     height: 200px;
     background-color: white;
     margin: 100px auto;
     padding: 15px;
   }
-  .btn-wrap {
+
+.btn-wrap {
     display: flex;
     justify-content: flex-end;
+    cursor: pointer;
   }
+
   .btn-close {
     width: 20px;
     height: 20px;
@@ -636,9 +639,11 @@ footer {
   .modal-block h3 {
     margin-bottom: 20px;
   }
+
   .form-field {
     margin-bottom: 15px;
   }
+
   .form-field  input {
     height: 30px;
     width: 100%;
@@ -647,11 +652,11 @@ footer {
   .show {
     display: block;
   }
+
   .hide {
     display: none;
   }
 
-  
   .slider-block > div {
     font-size: 50px;
     text-align: center;
@@ -659,3 +664,7 @@ footer {
     padding: 150px 0;
   }
   
+  .product-quantity {
+    text-align: center;
+    margin-bottom: 10px;
+}
